# oauth2-rs

./: #.travis.yml#  .gitignore  .travis.yml  Cargo.toml  README.md  UPGRADE.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
examples/: auth0_async_devicecode.rs  github.rs  github_async.rs  github_devicecode_async.rs  google.rs  google_devicecode.rs  keycloak.rs  letterboxd.rs  microsoft_devicecode.rs  microsoft_devicecode_common_user.rs  microsoft_devicecode_tenant_user.rs  msgraph.rs  okta.rs  twitch.rs  wunderlist.rs
oauth2/: Cargo.toml
oauth2-reqwest/: Cargo.toml
oauth2-reqwest/src/: lib.rs
oauth2/examples/: github_async.rs  google.rs  google_devicecode.rs  letterboxd.rs  microsoft_devicecode_tenant_user.rs  msgraph.rs  wunderlist.rs
oauth2/src/: basic.rs  client.rs  code.rs  devicecode.rs  helpers.rs  lib.rs  reqwest_client.rs  tests.rs
oauth2/src/token/: mod.rs
src/: async_internal.rs  basic.rs  client.rs  code.rs  curl.rs  curl_client.rs  devicecode.rs  endpoint.rs  error.rs  helpers.rs  introspection.rs  lib.rs  microsoft.rs  oauth2.rs  reqwest.rs  reqwest_client.rs  revocation.rs  tests.rs  types.rs  ureq.rs  ureq_3_client.rs  ureq_client.rs
src/reqwest/: async_client.rs  mod.rs
src/token/: mod.rs  tests.rs
tests/: lib.rs
