[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "4.0.0-alpha.4"
license = "MIT/Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest"]
pkce-plain = []

[dependencies]
base64 = "0.12"
thiserror="1.0"
http = "0.2"
rand = "0.7"
reqwest = { version = "0.11", optional = true, features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ureq = { version = "2", optional = true }
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4.0", optional = true }

[dev-dependencies]
hex = "0.4"
hmac = "0.8"
uuid = { version = "0.8", features = ["v4"] }
anyhow="1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.6.3"
