[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "4.4.1"
license = "MIT OR Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
pkce-plain = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
microsoft = ["jwt", "openssl"]

[dependencies]
base64 = "0.13"
thiserror = "1.0"
http = "0.2"
rand = "0.8"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2", optional = true }
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde_path_to_error = "0.1.2"
jwt = { git = "https://github.com/smndtrl/rust-jwt", branch = "x5t", optional = true, features = [ "openssl" ]}
openssl = { optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4.0", optional = true }

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.6.3"
