[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "5.0.0-rc.1"
license = "MIT OR Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2021"
readme = "README.md"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
pkce-plain = []
native-tls = ["reqwest/native-tls"]
reqwest-blocking = ["reqwest/blocking"]
rustls-tls = ["reqwest/rustls-tls"]
timing-resistant-secret-traits = []

[[example]]
name = "github"
required-features = ["reqwest-blocking"]

[[example]]
name = "google"
required-features = ["reqwest-blocking"]

[[example]]
name = "google_devicecode"
required-features = ["reqwest-blocking"]

[[example]]
name = "letterboxd"
required-features = ["reqwest-blocking"]

[[example]]
name = "msgraph"
required-features = ["reqwest-blocking"]

[[example]]
name = "wunderlist"
required-features = ["reqwest-blocking"]

[dependencies]
base64 = ">= 0.21, <0.23"
thiserror = "1.0"
http = "1"
rand = "0.8"
reqwest = { version = "0.12", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2", optional = true }
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde", "std", "wasmbind"] }
serde_path_to_error = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4.0", optional = true }

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.13"
